@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

Package Event <<Rectangle>>{
class UniqueEventList
class Event
class EventName
}

package Person {}

UniqueEventList --> "*" Event
Event *--> "1" EventName
Event --> "*" Person :> attendees
@enduml
